# claude-channel-switcher

./: .gitignore  README.md  main.js  package.json
.claude/: settings.local.json
src/: app.js  i18n.js  index.html  styles.css
tauri-app/: .gitignore  README.md  package.json
tauri-app/src/: app.js  i18n.js  index.html  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: codex.rs  main.rs
tauri-app/src/js/core/: api.js  state.js
tauri-app/src/js/features/: channels.js  codex.js  droid.js  fireworks.js  settings.js  statusline.js  theme.js
tauri-app/src/js/ui/: confirm.js  elastic-scroll.js  modal.js  navigation.js  titlebar.js  toast.js
tauri-app/src/js/utils/: debounce.js  dom.js  error.js  validation.js
