[package]
name = "claude-channel-switcher"
version = "3.0.0"
description = "Claude 渠道切换器"
authors = ["changingshow"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }


[features]
custom-protocol = ["tauri/custom-protocol"]
